# yuntech-course-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api_client.py  captcha_solver.py  course_enroller.py  login_manager.py  main.py  notifier.py  scraper.py  state.py  user_agent.py
