[project]
name = "yuntech-course-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "easyocr>=1.7.2",
    "numpy>=2.2.3",
    "opencv-python-headless>=4.11.0.86",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
